--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,7 +10,7 @@
           edit
   .contents
     .contents__box
-      =link_to "/", class: "contents__box__btn-1" do
+      =link_to "posts/new", class: "contents__box__btn-1" do
         =icon('fas', 'map-marked-alt')
         TripLog
       =link_to "/", class: "contents__box__btn-2" do  
@@ -19,3 +19,4 @@
       =link_to "/", class: "contents__box__btn-3" do
         =icon('fas', 'users')
         Tourist
+        
