--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -127,5 +127,15 @@
       });
     });
   </script>
+.header
+  旅の思い出
 
 #map-container 
+
+.footer
+  .footer__list
+    =link_to "/", class: "footer__list__btn" do  
+      =icon('fas','undo')
+      マイページ
+
+
