--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -4,7 +4,7 @@
   <script>
     $(function(){ 
       var areaLinks = {
-        1:"/",
+        1:"/tweets",
         2:"/",
         3:"/",
         4:"/",
@@ -121,11 +121,16 @@
         fontSize : 11,
         fontShadowColor : "#fff",
         onSelect : function(data){
-            alert(data.name);
+            //alert(data.name);
             location.href = areaLinks[data.area.code];
         }  
       });
     });
   </script>
+.header
 
 #map-container 
+
+.footer
+  .footer__list
+  
