add_login_function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 @import "reset";
+@import "config/colors";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/tweets";
 @import "modules/index";
-
+@import "modules/user";
+@import "modules/flash";
 // @import "japan_map"
