--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -15,8 +15,8 @@
         .main1__tweets__body
         =tweet.body
         .main1__tweets__image
-        
+        = image_tag tweet.image.url
   .footer1
     .footer1__form-box
       .footer1__form-box__form
-      .footer1__form-box__btn
+      
